website/versioned_docs/version-1.x/hooks/useIsFetching.mdx
---
sidebar_label: useIsFetching()
---

# useIsFetching(...)

The Hook enables you to monitor the number of queries,
matching the provided filters. This can be useful for creating loading indicators
or performing other actions based on whether any requests are currently in progress.
See the TanStack [_useIsFetching(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useIsFetching) documentation for more details.

```ts
const queriesNumber = qraft.<service>.<operation>.useIsFetching(
  filters,
  queryClient,
)
```

### Arguments

1.  `filters?: QueryFiltersByParameters | QueryFiltersByQueryKey`
    - **Optional**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
      to be used. If not provided, _all_ normal and _Infinite_ queries will be used to filter.
    - `filters.parameters: { path, query, header }` will be used for filtering queries by parameters
    - `filters.infinite: boolean` will be used to filter infinite or normal queries
    - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
      - `filters.queryKey` and `filters.parameters` are mutually exclusive
    - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
2.  `queryClient?: QueryClient`
    - **Optional** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
    - _If not provided_
      - `QraftContext.queryClient` will be used if available
      - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
        result will be used as a fallback

### Returns
`number`: The number of queries that are matching the provided filters.

### Example

```tsx title="src/FetchStatus.tsx"
import { createAPIClient } from './api'; // generated by OpenAPI Qraft CLI

const qraft = createAPIClient();

function FetchStatus() {
  // Checks all queries `GET /entities`
  const fetchingTotal = qraft.entities.getEntities.useIsFetching();

  // Checks all queries `GET /entities/3e3e-3e3e-3e3e` and `x-monite-version: 2023-09-01` header
  const specificQueryKeyTotal = qraft.entities.getEntities.useIsFetching({
    infinite: false,
    parameters: {
      header: {
        'x-monite-version': '2023-09-01',
      },
      path: {
        entity_id: '3e3e-3e3e-3e3e',
      },
    },
  });

  return (
    <>
      {!!fetchingTotal && <div>Number of queries: {fetchingTotal}...</div>}
      {!!specificQueryKeyTotal && <div>Loading specific query...</div>}
    </>
  );
}
```
